# drankroulette

./: .gitmodules
app/: .gitignore  Makefile  README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/profile/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: local_preferences.dart  main.dart
app/lib/components/: display_game.dart  physical_requirment.dart
app/lib/components/create/: physical_requirment.dart
app/lib/components/home/: game_picker.dart  play_button.dart
app/lib/data/: api.dart  game.dart  result.dart  token.dart
app/lib/views/: base.dart  component.dart  create.dart  create_view.dart  game_catalogue.dart  home.dart  splash_screen.dart  text_popup.dart
server/: .gitignore  Cargo.toml  config.toml
server/dal/: Cargo.toml
server/dal/migrations/: V1__initial.sql  V2__game_outline.sql  V3__game_outline_not_null.sql
server/dal/src/: lib.rs
server/dal/src/fs/: config.rs  mod.rs
server/dal/src/mysql/: game.rs  mod.rs
server/drankroulette/: Cargo.toml
server/drankroulette/src/: main.rs
server/proto/: Cargo.toml  build.rs
server/proto/src/: lib.rs
server/proto/src/entity/: game.proto
server/proto/src/payload/game/: create.proto  list.proto
server/proto/src/payload/token/: generate.proto
server/routes/: Cargo.toml
server/routes/src/: data.rs  error.rs  lib.rs
server/routes/src/routes/: fingerprint.rs  mod.rs  routable.rs
server/routes/src/routes/v1/: mod.rs
(+6 files in other folders)
