[package]
name = "dal"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
thiserror = "1.0.32"
toml = "0.5.9"
time = "0.3.13"
tracing = "0.1.36"

[dependencies.serde]
version = "1.0.143"

[dependencies.tokio]
version = "1.20.1"
default-features = false
features = ["fs", "io-util"]

[dependencies.mysql_async]
git = "https://github.com/TobiasDeBruijn/mysql_async.git"
branch = "rustls-tls"
default-features = false
features = ["rustls-tls", "flate2-zlib"]

[dependencies.refinery]
version = "=0.8.4"
default-features = false
features = ["mysql_async"]
